--- a/src/main/webapp/html/bookDetail.html
+++ b/src/main/webapp/html/bookDetail.html
@@ -13,11 +13,11 @@
 		<div id="bookDetail">
 			<h1>書籍詳細</h1>
 
-			<div>
+			<div class="inner">
 			    <div>
 			    </div>
 			    <div>
-			        <div class="leftForm" >タイトル</div>
+			        <span class="leftForm" >タイトル</span>
 			        <div class="blankForm"> : </div>
 			        <div class="rightForm" id="title"></div>
 			    </div>
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 		<!-- 戻るとき、戻る先がログインしてるかしてないかで異なるので後で考える -->
-		<button id="return">戻る</button>
+		<button id="return" class="orangeButton">戻る</button>
 	</div>
 
 	<!--..はファイルの移動-->
