--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="../css/Design.css">
 </head>
 <body>
-<body>
 	<div id="buttonList"></div>
 	<div class="table">
 		<div id = "search">
@@ -14,20 +13,20 @@
 		<form id="bookSelector">
 			<div>
 				<label for="titleParam" class="leftForm">タイトル：</label> <input type="text"
-					maxlength="85" name="titleParam" id="titleParam">
+					maxlength="85" name="titleParam" id="titleParam" class="rightForm">
 			</div>
 			<div>
 				<label for="authorParam" class="leftForm">作者：</label> <input type="text"
-					maxlength="85" name="authorParam" id="authorParam">
+					maxlength="85" name="authorParam"  class="rightForm" id="authorParam" >
 			</div>
 			<div>
 				<label for="genreParam" class="leftForm">ジャンル：</label> <select name="genreParam"
-					id="genreParam">
+					id="genreParam"  class="rightForm">
 				</select>
 			</div>
 			<div>
 				<label for="statusParam" class="leftForm">ステータス：</label> <select name="statusParam"
-					id="statusParam">
+					id="statusParam" class="rightForm">
 					<option value="" selected>指定しない</option>
 					<option value="貸出可能">貸出可能</option>
 					<option value="貸出中">貸出中</option>
