--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -15,23 +15,23 @@
 	<div class="header">
 		<h1>ログイン</h1>
 	</div>
-	<div>
+	<div class="inner">
 		<div class="error"></div>
 		<div>
 			<label for="mailAddress" class="leftForm">メールアドレス:</label> <input type="text"
-				placeholder="メールアドレス" id="mailAddress" class="mailAddress"
+				placeholder="メールアドレス" id="mailAddress" class="mailAddress rightForm"
 				name="mailAddress" maxlength="100"></input>
 		</div>
 		<div>
-			<label for="password" class="leftForm">パスワード:</label> <input type="text"
-				placeholder="パスワード" id="password" class="password" name="password"
+			<label for="password" class="leftForm">パスワード:</label> <input type="password"
+				placeholder="パスワード" id="password" class="password  rightForm" name="password"
 				maxlength="10"></input>
 		</div>
 		<div>
 			<button id="general-login-button" class="blueButton">ユーザログイン</button>
 			<button id="manager-login-button" class="blueButton">管理者ログイン</button>
 		</div>
-		<div>
+		<div class="right">
 			<button id="create-user-button" class="blueButton">ユーザ新規登録</button>
 			<button id="back-to-bookList-button" class="orangeButton">戻る</button>
 		</div>
