--- a/src/main/webapp/html/managementTop.html
+++ b/src/main/webapp/html/managementTop.html
@@ -4,24 +4,24 @@
 <meta charset="UTF-8">
 <title>管理者トップページ</title>
 <!--<link rel="stylesheet" href="css/postStyle.css">-->
+<link rel="stylesheet" href="../css/Design.css">
 </head>
 <body>
 	<h1>管理者トップページ</h1>
 	<div class="main clearfix">
-		<div id="operationList">
+		<div id="operationList" class="sub" >
 			<h3>管理者操作一覧</h3>
+			<div>
 			<p>
 				<button type="button" id="createBook" class = "blueButton">書籍登録</button>
 				（新しく購入した書籍を登録できます）
 			</p>
+			</div>
 			<p>
 				<button type="button" id="lendingBookList" class = "blueButton">貸出中書籍一覧</button>
 				（現在、貸出中の書籍を一覧できます）
 			</p>
 		</div>
-	</div>
-	<div>
-		<button type="button" id="bookList" class = "blueButton">書籍一覧</button>
 	</div>
 
 	<script src="../js/jquery-3.3.1.min.js"></script>
