--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -12,40 +12,42 @@
 <body>
 
 	<!--  header -->
-	<div class="header">
+	<div class="header" >
 		<h1>ユーザー新規登録</h1>
 	</div>
-	<div>
+	<div class="inner">
 		<form id="userForm" enctype="multipart/form-data">
 			<div class="error"></div>
 			<div>
-				<label for="mailAddress">メールアドレス</label> <input type="text"
-					placeholder="" id="mailAddress" class="mailAddress"
+				<label for="mailAddress" class="leftForm">メールアドレス:</label>
+				<input type="text"
+					placeholder="" id="mailAddress" class="mailAddress rightForm"
 					name="mailAddress" maxlength="100"></input>
 			</div>
 			<div>
-				<label for="employeeName">氏名</label> <input type="text"
-					placeholder="氏名が表示されます" id="employeeName" class="employeeName"
-					name="employeeName" readonly></input>
-
+				<label for="employeeName" class="leftForm">氏名:</label>
+				 <label id="employeeName" class="employeeName rightForm">(該当する社員名を表示)
+				</label>
 			</div>
+
 			<div>
-				<label for="password">パスワード</label> <input type="password"
-					placeholder="" id="password" class="password" name="password"
+				<label for="password" class="leftForm">パスワード:</label>
+				<input type="password"
+					placeholder="" id="password" class="password rightForm" name="password"
 					maxlength="10"></input>
 			</div>
 			<div>
-				<label for="password2">パスワード再入力</label> <input type="password"
-					placeholder="" id="password2" class="password2" name="password2"
+				<label for="password2" class="leftForm">パスワード再入力:</label> <input type="password"
+					placeholder="" id="password2" class="password2  rightForm" name="password2"
 					maxlength="10"></input>
 			</div>
 			<div>
 				<button id="createUser-login-button" class="blueButton">登録してログイン</button>
+				<button id="returnButton" class="orangeButton">戻る</button>
 			</div>
 		</form>
-	</div>
-	<div>
-		<button id="createUser-login-button" class="orangeButton">戻る</button>
+
+
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/createUser.js"></script>
