change with yurichan

--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -47,7 +47,7 @@
 			<div id="book"></div>
 			<div id="insertBlock"></div>
 		</div>
-		<span id="prev">前へ</span> <span id="page"></span> <span id="next">次へ</span>
+<!-- 		<span id="prev">前へ</span> <span id="page"></span> <span id="next">次へ</span> -->
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/bookList.js"></script>
