--- a/src/main/webapp/html/bookDetail.html
+++ b/src/main/webapp/html/bookDetail.html
@@ -17,7 +17,7 @@
 			    <div>
 			    </div>
 			    <div>
-			        <span class="leftForm" >タイトル</span>
+			        <div class="leftForm" >タイトル:</div>
 			        <div class="blankForm"> : </div>
 			        <div class="rightForm" id="title"></div>
 			    </div>
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 		<!-- 戻るとき、戻る先がログインしてるかしてないかで異なるので後で考える -->
-		<button id="return" class="orangeButton">戻る</button>
+		<button id="return">戻る</button>
 	</div>
 
 	<!--..はファイルの移動-->
