--- a/src/main/webapp/html/createBook.html
+++ b/src/main/webapp/html/createBook.html
@@ -32,7 +32,6 @@
 						<label for="author" class="leftForm">作者：</label> <input type="text"
 							maxlength="85" id="author" name="author"
 							placeholder="例：峯村吉泰" required  class="rightForm">
-
 					</div>
 
 					<div>
@@ -42,23 +41,20 @@
 					</div>
 
 					<div>
-						<table>
-							<tr>
-								<td rowspan="2">ジャンル：</td>
-								<td class="rightForm">bb</td>
-							</tr><tr>
-								<td class="rightForm">bb</td>
-							</tr>
-						</table>
-								<label class="leftForm">ジャンル：</label>
-
+						<label for="genreParam" class="leftForm leftForm">ジャンル：</label>
+						<a>
 							<select id="genreParam" name="genreParam"  class="rightForm"></select>
-
-							<label for="genre"  class="leftForm"></label> <input type="text"
-								id="genre" name="genre" required  class="rightForm">
-
-
+						</a>
 					</div>
+
+					<div>
+						<label for="genre"  class="leftForm"></label> <input type="text"
+							id="genre" name="genre" required  class="rightForm">
+					</div>
+
+
+
+
 
 
 
