--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -5,6 +5,7 @@
 
 <title>貸出中書籍一覧</title>
 <link rel="stylesheet" href="../css/FontColor.css">
+<link rel="stylesheet" href="../css/Design.css">
 </head>
 <body>
 	<div class="main clearfix">
@@ -17,10 +18,6 @@
 		</div>
 	</div>
 
-	<div>
-		<button id="previousPage" class="blueButton">前のページへ</button>
-		<button id="followingPage" class="blueButton">次のページへ</button>
-	</div>
 
 	<div>
 		<button id="returnManageTopPage" class="orangeButton">戻る</button>
