--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -43,7 +43,7 @@
 			</div>
 			<div>
 				<button id="createUser-login-button" class="blueButton">登録してログイン</button>
-				<button id="returnButton" class="orangeButton">戻る</button>
+				<button type="button" id="returnButton" class="orangeButton">戻る</button>
 			</div>
 		</form>
 	</div>
